binary classification svm modularization done without error checking

--- a/captcha_svm/captcha_svm.vcxproj.filters
+++ b/captcha_svm/captcha_svm.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="data.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bin_svm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="data.h">
