--- a/captcha_svm/captcha_svm.vcxproj
+++ b/captcha_svm/captcha_svm.vcxproj
@@ -64,11 +64,13 @@
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>
       </PrecompiledHeader>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -80,6 +82,7 @@
   <ItemGroup>
     <ClCompile Include="captcha_svm.cpp" />
     <ClCompile Include="data.cpp" />
+    <ClCompile Include="bin_svm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="data.h" />
