--- a/captcha_svm/captcha_svm.vcxproj.filters
+++ b/captcha_svm/captcha_svm.vcxproj.filters
@@ -24,9 +24,18 @@
     <ClCompile Include="bin_svm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bin_img_svm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="data.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bin_svm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bin_img_svm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
